// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClickAreaMobile should set the min height of the click area as passed and set in styles 1`] = `
.emotion-0 {
  height: 100%;
  min-height: 200px;
}

<ClickAreaMobile
  isExpanded={true}
  minHeight={200}
>
  <Noop />
<div
    className="editor-click-wrapper emotion-0"
    onClick={[Function]}
  />
</ClickAreaMobile>
`;

exports[`ClickAreaMobile should set the min height of the click area as passed, but not set in styles 1`] = `
.emotion-0 {
  height: 100%;
}

<ClickAreaMobile
  isExpanded={false}
  minHeight={200}
>
  <Noop />
<div
    className="editor-click-wrapper emotion-0"
    onClick={[Function]}
  />
</ClickAreaMobile>
`;
